Added HTTP Logging | Fixed New Lines being eaten